--- a/Exercise/Module5_UdaciFitness/UdaciFitness/package.json
+++ b/Exercise/Module5_UdaciFitness/UdaciFitness/package.json
@@ -7,6 +7,7 @@
     "react-native-web": "0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
+    "styled-components": "^5.1.1",
     "udacifitness-calendar": "github:ftrevo/react-native-calendars#master"
   },
   "devDependencies": {
