--- a/Exercise/Module5_UdaciFitness/UdaciFitness/package.json
+++ b/Exercise/Module5_UdaciFitness/UdaciFitness/package.json
@@ -4,6 +4,8 @@
     "@react-navigation/native": "^5.5.1",
     "expo": "^37.0.12",
     "expo-constants": "^9.0.0",
+    "expo-location": "^8.1.0",
+    "expo-permissions": "^8.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
